Remade methods pages, added scroll-to-top arrow, fixed some bugs and added one new with secondary scrollbar on main page; to be fixed next time.

--- a/angular-app/src/app/components/accordion/accordion.component.css
+++ b/angular-app/src/app/components/accordion/accordion.component.css
@@ -26,6 +26,8 @@ div{
   cursor: pointer;
   background: white;
   margin-bottom: 0.5em;
+  transition: background-color ease 0.5s, box-shadow ease 0.5s;
+
 }
 .accordion-head:hover{
 
