--- a/angular-app/src/app/components/main-page/main-page.component.css
+++ b/angular-app/src/app/components/main-page/main-page.component.css
@@ -4,6 +4,8 @@ body{
   transform-style: preserve-3d;
   overflow-x: hidden;
   overflow-y: scroll;
+  font-size: 150%;
+  color: #141D2E;;
 }
 i.white{
   border: solid white;
@@ -11,18 +13,26 @@ i.white{
   display: inline-block;
   padding: 0.8em;
 }
+
+/*i.white:hover{*/
+/*border: solid #919eba;*/
+/*border-width: 0 0.3em 0.3em 0;*/
+/*display: inline-block;*/
+/*padding: 0.8em;*/
+/*}*/
 i.dark{
   border: solid #919eba;
   border-width: 0 0.3em 0.3em 0;
   display: inline-block;
   padding: 0.8em;
 }
-i.dark:hover{
-  border: solid #141D2E;;
-  border-width: 0 0.3em 0.3em 0;
-  display: inline-block;
-  padding: 0.8em;
-}
+
+/*i.dark:hover{*/
+/*border: solid #141D2E;*/
+/*border-width: 0 0.3em 0.3em 0;*/
+/*display: inline-block;*/
+/*padding: 0.8em;*/
+/*}*/
 #main{
   padding: 5%;
 }
@@ -40,6 +50,10 @@ nav{
   color: #919eba;
   width: 100%;
   position: fixed;
+}
+
+p.information {
+  padding: 10%;
 }
 
 .nav-transparent{
@@ -109,20 +123,44 @@ nav{
   height: 400px;
   margin-left: 3%;
   margin-right: 3%;
-  margin-bottom: 5em;
+  margin-bottom: 10em;
 
 }
 
 .my-card-inner {
   width: 100%;
   height: 100%;
-
   background: white;
   box-shadow: 0 0.5em 0.5em 0 grey;
 }
 
 .cards {
+  margin-bottom: 0;
   height: auto;
   width: 100%;
   overflow: hidden;
+}
+
+.main-page-content {
+  width: 100%;
+  background: white;
+  padding: 5% 20%;
+}
+
+.arrow-to-top {
+  font-size: 4.5em;
+  color: #919eba;
+  margin-bottom: 42vh;
+  position: fixed;
+  right: 0.5em;
+  bottom: 0;
+
+}
+
+.arrow-to-top:hover {
+  cursor: pointer;
+  position: fixed;
+  right: 0.5em;
+  bottom: 0;
+  color: #141D2E;
 }
